# diabetes_prediction

./: diabetes-prediction-2.ipynb  pyproject.toml
